--- a/SchoolAdministrationSystem.csproj
+++ b/SchoolAdministrationSystem.csproj
@@ -24,6 +24,8 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Moq" Version="4.20.72" />
+		<PackageReference Include="NUnit" Version="3.14.0" />
 	</ItemGroup>
 
 </Project>
